# real-esrgan-burn

./: Cargo.toml  build-for-web.sh  build.rs  error.txt  https_server.py  index.css  index.html  index.js  run-server.sh
model/: Cargo.toml
model/src/: lib.rs
model/src/model/: utils.rs
pkg/no_simd/: package.json  real_esrgan.js
src/: lib.rs  main.rs  web.rs
src/model/: mod.rs  rrdbnet.rs  utils.rs
