[package]
name = "model"
version = "0.1.0"
edition = "2024"

[features]
default = []
half_precision = []

[dependencies]
anyhow = "1.0.97"
image = { version = "0.25.6", features = ["jpeg", "png"] }
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = ["ndarray", "wgpu"] }
burn-import = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false }
